objects/CMPL123__TWD_Audit_Default_Object__mdt.object
<CustomObject>
    <description>sobject and their fields to be audited</description>
    <fields>
        <fullName>CMPL123__Application__c</fullName>
        <description>application name the sobject being audited in</description>
        <label>application</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__AuditTrail_External_Id__c</fullName>
        <label>AuditTrail External Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Audited_Object__c</fullName>
        <description>SObject to be Audited</description>
        <label>Audited Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Audit_Default_Object_Lists</relationshipLabel>
        <relationshipName>Audit_Default_Object_Lists</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123__Child_Relationships_Object__c</fullName>
        <description>Child relationship fields</description>
        <label>Child Relationships Object</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Fields__c</fullName>
        <description>Fields on SObject to be audited</description>
        <label>Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Parent_Relationship_Object__c</fullName>
        <description>parent fields</description>
        <label>Parent Relationship Object</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>TWD Audit Default Object</label>
    <pluralLabel>TWD Audit Default Objects</pluralLabel>
</CustomObject>